--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>BTSTEEL 事故管理系统</title>
+    <title>BTSTEEL制造部</title>
     <style>
         :root {
             --primary-color: #d32f2f;  /* 主色调红色 */
-            --background: #f8f9fa;     /* 浅灰背景 */
-            --text-primary: #2d3436;   /* 深灰文字 */
+            --background: linear-gradient(135deg, #808080, #000000);     /* 灰色到黑色渐变背景 */
+            --text-primary: #333333;   /* 深灰色文字 */
         }
 
         body {
@@ -32,6 +32,12 @@
             top: 0;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             font-size: 14px;
+            gap: 8px;
+        }
+
+        .time-display {
+            min-width: 100px;
+            /* text-align: right; */
         }
 
         /* 主标题优化 */
@@ -39,9 +45,17 @@
             margin-top: 60px;
             text-align: center;
             font-size: 1.8rem;
-            color: var(--primary-color);
+            color: white;
             letter-spacing: 1.5px;
-            font-weight: 600;
+            font-weight: 700;
+            font-family: 'Microsoft YaHei', sans-serif;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+            transition: all 0.3s ease;
+        }
+
+        .main-title:hover {
+            transform: scale(1.05);
+            text-shadow: 0 0 10px rgba(211, 47, 47, 0.8), 0 0 20px rgba(211, 47, 47, 0.6);
         }
 
         /* 简化后的机器人插图容器 */
@@ -63,7 +77,8 @@
         /* 按钮容器优化 */
         .button-container {
             display: grid;
-            gap: 1.2rem;
+            grid-template-columns: repeat(1, 1fr);
+            gap: 1rem;
             padding: 0 1.5rem;
             max-width: 500px;
             margin: 0 auto;
@@ -78,8 +93,20 @@
             text-decoration: none;
             text-align: center;
             transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
             border: 1px solid transparent;
+            background: linear-gradient(135deg, #1e3c72, #2a5298);
+            color: white;
+        }
+
+        .btn:hover {
+            box-shadow: 0 0 20px rgba(0, 255, 255, 0.6);
+            transform: scale(1.05);
+        }
+
+        .btn:active {
+            transform: scale(0.95);
+            box-shadow: 0 0 10px rgba(0, 255, 255, 0.4);
         }
 
         /* 按钮颜色调整 */
@@ -124,12 +151,12 @@
 </head>
 <body>
     <div class="status-bar">
-        <div>BTSTEEL</div>
+        <div>BTSTEEL管理系统</div>
         <div class="time-display">9:41</div>
     </div>
 
     <main>
-        <h1 class="main-title">事故管理系统</h1>
+        <h1 class="main-title">BTSTEEL管理系统</h1>
         
         <div class="hero-container">
             <div class="hero-robot"></div>
