--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <style>
         :root {
             --primary-color: #d32f2f;  /* 主色调红色 */
-            --background: linear-gradient(135deg, #808080, #000000);     /* 灰色到黑色渐变背景 */
+            --background: linear-gradient(10deg, #808080, #000000);     /* 灰色到黑色渐变背景 */
             --text-primary: #333333;   /* 深灰色文字 */
         }
 
         body {
             margin: 0;
             font-family: 'Segoe UI', system-ui, sans-serif;
-            background: var(--background);
+            background: rgb(54, 54, 54);
             color: var(--text-primary);
             -webkit-tap-highlight-color: transparent;
         }
@@ -82,25 +82,27 @@
             padding: 0 1.5rem;
             max-width: 500px;
             margin: 0 auto;
+            
         }
 
         /* 扁平化按钮设计 */
         .btn {
             padding: 1rem;
-            border-radius: 12px;
+            border-radius: 20px;
             font-size: 1.1rem;
             font-weight: 500;
             text-decoration: none;
             text-align: center;
             transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
-            border: 1px solid transparent;
-            background: linear-gradient(135deg, #1e3c72, #2a5298);
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.15);
+            border: 0.5px solid white;
+            background: radial-gradient(circle, #000000, #636262);
             color: white;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
         }
 
         .btn:hover {
-            box-shadow: 0 0 20px rgba(0, 255, 255, 0.6);
+            box-shadow: 0 0 20px rgba(249, 250, 250, 0.6);
             transform: scale(1.05);
         }
 
@@ -110,18 +112,10 @@
         }
 
         /* 按钮颜色调整 */
-        .accident-query {
-            background: var(--primary-color);
+        /* .accident-query, .accident-dashboard, .accident-statistics {
+            background: linear-gradient(180deg, #000000, var(--primary-color));
             color: white;
-        }
-        .accident-dashboard {
-            background: #fdd835;  /* 明黄色 */
-            color: var(--text-primary);
-        }
-        .accident-statistics {
-            background: #7b1fa2;  /* 深紫色 */
-            color: white;
-        }
+        } */
 
         /* 交互效果 */
         .btn:active {
@@ -157,15 +151,11 @@
 
     <main>
         <h1 class="main-title">BTSTEEL管理系统</h1>
-        
-        <div class="hero-container">
-            <div class="hero-robot"></div>
-        </div>
-
+        <div style="height: 200px;"></div>
         <div class="button-container">
             <a href="https://mcnpli73gntm.feishu.cn/share/base/query/shrcn1gMEqC3Fd1spIytWpMpjHc" class="btn accident-query">事故查询</a>
             <a href="https://mcnpli73gntm.feishu.cn/wiki/QnehwWODtiTYLvkU3DQcuXt6n8d?from=from_copylink" class="btn accident-dashboard">事故仪表盘</a>
-            <a href="https://mcnpli73gntm.feishu.cn/share/base/form/shrcn7wr3scjg7HgFIHONRXDzad" class="btn accident-statistics">事故统计链接</a>
+            <a href="https://mcnpli73gntm.feishu.cn/share/base/form/shrcn7wr3scjg7HgFIHONRXDzad" class="btn accident-statistics">调度事故统计</a>
         </div>
     </main>
 
