--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             margin-top: 60px;
             text-align: center;
             font-size: 1.8rem;
-            color: white;
+            color: rgb(255, 255, 255);
             letter-spacing: 1.5px;
             font-weight: 700;
             font-family: 'Microsoft YaHei', sans-serif;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+            text-shadow: 0 0 10px rgba(211, 47, 47, 0.8), 0 0 20px rgba(211, 47, 47, 0.6);
             transition: all 0.3s ease;
         }
 
