--- a/index.html
+++ b/index.html
@@ -98,12 +98,13 @@
             border: 0.5px solid white;
             background: radial-gradient(circle, #000000, #636262);
             color: white;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+            box-shadow: 0 0 15px rgba(251, 107, 36, 0.8);
         }
 
         .btn:hover {
             box-shadow: 0 0 20px rgba(249, 250, 250, 0.6);
             transform: scale(1.05);
+            color: rgb(251, 189, 95);
         }
 
         .btn:active {
@@ -156,6 +157,7 @@
             <a href="https://mcnpli73gntm.feishu.cn/share/base/query/shrcn1gMEqC3Fd1spIytWpMpjHc" class="btn accident-query">事故查询</a>
             <a href="https://mcnpli73gntm.feishu.cn/wiki/QnehwWODtiTYLvkU3DQcuXt6n8d?from=from_copylink" class="btn accident-dashboard">事故仪表盘</a>
             <a href="https://mcnpli73gntm.feishu.cn/share/base/form/shrcn7wr3scjg7HgFIHONRXDzad" class="btn accident-statistics">调度事故统计</a>
+            <a href="https://mcnpli73gntm.feishu.cn/share/base/form/shrcnxvtge4lDvpweWHEpKtZXQO" class="btn accident-statistics">实际产量统计</a>
         </div>
     </main>
 
