--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <a href="https://mcnpli73gntm.feishu.cn/share/base/query/shrcn1gMEqC3Fd1spIytWpMpjHc" class="btn accident-query">事故查询</a>
             <a href="https://mcnpli73gntm.feishu.cn/wiki/QnehwWODtiTYLvkU3DQcuXt6n8d?from=from_copylink" class="btn accident-dashboard">事故仪表盘</a>
             <a href="https://mcnpli73gntm.feishu.cn/share/base/form/shrcn7wr3scjg7HgFIHONRXDzad" class="btn accident-statistics">调度事故统计</a>
-            <a href="https://mcnpli73gntm.feishu.cn/share/base/form/shrcnxvtge4lDvpweWHEpKtZXQO" class="btn accident-statistics">实际产量统计</a>
+            <a href="https://mcnpli73gntm.feishu.cn/share/base/form/shrcnxvtge4lDvpweWHEpKtZXQO" class="btn accident-statistics">实际班产统计</a>
         </div>
     </main>
 
