--- a/index.html
+++ b/index.html
@@ -154,10 +154,12 @@
         <h1 class="main-title">BTSTEEL管理系统</h1>
         <div style="height: 200px;"></div>
         <div class="button-container">
-            <a href="https://mcnpli73gntm.feishu.cn/share/base/query/shrcn1gMEqC3Fd1spIytWpMpjHc" class="btn accident-query">事故查询</a>
+            <a href="https://mcnpli73gntm.feishu.cn/share/base/dashboard/shrcndGJW5ImfzheePgnRNOfCof" class="btn accident-statistics">产量跟踪仪表盘</a>
             <a href="https://mcnpli73gntm.feishu.cn/wiki/QnehwWODtiTYLvkU3DQcuXt6n8d?from=from_copylink" class="btn accident-dashboard">事故仪表盘</a>
-            <a href="https://mcnpli73gntm.feishu.cn/share/base/form/shrcn7wr3scjg7HgFIHONRXDzad" class="btn accident-statistics">调度事故统计</a>
             <a href="https://mcnpli73gntm.feishu.cn/share/base/form/shrcnxvtge4lDvpweWHEpKtZXQO" class="btn accident-statistics">实际班产统计</a>
+            <a href="https://mcnpli73gntm.feishu.cn/share/base/form/shrcn7wr3scjg7HgFIHONRXDzad" class="btn accident-statistics">调度事故统计</a>
+            <a href="https://mcnpli73gntm.feishu.cn/share/base/query/shrcn1gMEqC3Fd1spIytWpMpjHc" class="btn accident-query">事故查询</a>
+            
         </div>
     </main>
 
