--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <style>
         :root {
             --primary-color: #d32f2f;  /* 主色调红色 */
-            --background: linear-gradient(10deg, #808080, #000000);     /* 灰色到黑色渐变背景 */
+            --background: linear-gradient(10deg, #0f0c29, #302b63);     /* 深蓝到深紫渐变背景 */
             --text-primary: #333333;   /* 深灰色文字 */
         }
 
         body {
             margin: 0;
             font-family: 'Segoe UI', system-ui, sans-serif;
-            background: rgb(54, 54, 54);
+            background: rgb(233, 233, 233);     /* 深蓝到深紫渐变背景 */
             color: var(--text-primary);
             -webkit-tap-highlight-color: transparent;
         }
@@ -87,16 +87,17 @@
 
         /* 扁平化按钮设计 */
         .btn {
-            padding: 1rem;
+            padding: 1rem 11rem;
             border-radius: 20px;
             font-size: 1.1rem;
             font-weight: 500;
             text-decoration: none;
             text-align: center;
+            text-align-last: justify;
             transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
             box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.15);
             border: 0.5px solid white;
-            background: radial-gradient(circle, #000000, #636262);
+            background: radial-gradient(circle, #272626, #f1f1f1);
             color: white;
             box-shadow: 0 0 15px rgba(251, 107, 36, 0.8);
         }
