--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
             <a href="https://mcnpli73gntm.feishu.cn/share/base/form/shrcnxvtge4lDvpweWHEpKtZXQO" class="btn accident-statistics">实际班产统计</a>
             <a href="https://mcnpli73gntm.feishu.cn/share/base/form/shrcn7wr3scjg7HgFIHONRXDzad" class="btn accident-statistics">调度事故统计</a>
             <a href="https://mcnpli73gntm.feishu.cn/share/base/query/shrcn1gMEqC3Fd1spIytWpMpjHc" class="btn accident-query">事故查询</a>
-            
+            <a href="https://mcnpli73gntm.feishu.cn/share/base/form/shrcn1UemXgDATlVBGfkoYWLSss" class="btn accident-query">板坯库存统计</a>
+            <a href="https://mcnpli73gntm.feishu.cn/share/base/form/shrcnQ25LATjsTX99umWISJhKTe" class="btn accident-query">中间库存统计</a>
         </div>
     </main>
 
